[package]
name = "cow-sdk-orderbook"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Typed CoW Protocol orderbook client models and decoding helpers"
readme = "README.md"
documentation = "https://docs.rs/cow-sdk-orderbook"
homepage = "https://github.com/cowdao-grants/cow-rs"
keywords = ["cow-protocol", "sdk", "orderbook", "api", "trading"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[lints]
workspace = true

[features]
default = []
tracing = ["dep:tracing", "cow-sdk-transport-policy/tracing"]

[dependencies]
cow-sdk-core = { path = "../core", version = "0.1.0" }
cow-sdk-transport-policy = { path = "../transport-policy", version = "0.1.0" }
async-trait.workspace = true
http.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }
url.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = ["json", "rustls", "gzip"] }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util", "time"] }
tracing-core = "0.1.36"
wiremock.workspace = true

[[bench]]
name = "quote_cost"
harness = false
