[package]
name = "cow-sdk-orderbook"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Typed CoW Protocol orderbook client models and decoding helpers"
readme = "README.md"
documentation = "https://docs.rs/cow-sdk-orderbook"
homepage = "https://github.com/0xSymbiome/cow-rs"
keywords = ["cow-protocol", "sdk", "orderbook", "api", "trading"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[lints]
workspace = true

[features]
default = []
tracing = ["dep:tracing", "cow-sdk-core/tracing"]
# The Tsify boundary derive on the orderbook response types surfaced by the
# wasm-bindgen npm leaf (`crates/wasm`). Off by default and pulled only by the
# wasm flavours that expose a native-price client: Tsify emits each `.d.ts` as a
# global `typescript_custom_section`, so a target-gated (but feature-ungated)
# derive would leak `NativePriceResponse` into every flavour that links this
# crate — including `signing`, which surfaces no native-price method. Gating the
# derive behind this feature scopes it to the orderbook/trading flavours.
# The wasm `tsify`/`wasm-bindgen` deps are target-gated to JS realms, so enabling
# this on a non-wasm or WASI target is an inert no-op.
ts-bindings = ["dep:tsify", "dep:wasm-bindgen"]
# Narrower split for the boundary types that only the `trading` flavour surfaces
# (today: `OrderbookBinding`, embedded in the trading `QuoteResults`
# tree). It is NOT pulled by the `orderbook` flavour because that flavour does
# not enable `cow-sdk-core/ts-bindings`, so its `env: CowEnv` field would
# otherwise reference an undeclared type. The `trading` flavour enables both
# this and `cow-sdk-core/ts-bindings`, so the reference resolves there.
ts-bindings-trading = ["ts-bindings"]

[dependencies]
cow-sdk-core = { path = "../core", version = "0.1.0-alpha.8", features = ["transport-policy"] }
async-trait.workspace = true
http.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }
url.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = ["rustls", "gzip"] }

# The Tsify boundary derive on the orderbook response types consumed by the
# wasm-bindgen npm leaf (`crates/wasm`). Gated to JS realms
# (`target_os = "unknown"`) so WASI / Component builds never pull
# tsify/wasm-bindgen — only the one wasm target whose `target_os` is `unknown`
# carries them. Mirrors the identity-newtype gate in `crates/core/Cargo.toml`.
# Optional and pulled by the `ts-bindings` feature: a wasm flavour that does not
# surface a native-price client (e.g. `signing`) links this crate without the
# feature and so emits no `NativePriceResponse` declaration.
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
tsify = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
cow-sdk-test-utils = { path = "../test-utils" }
proptest.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util", "time"] }
trybuild.workspace = true
wiremock.workspace = true
