[package]
name = "cow-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Facade crate for CoW Protocol Rust SDK surfaces"
readme = "README.md"
documentation = "https://docs.rs/cow-sdk"
homepage = "https://github.com/cowdao-grants/cow-rs"
keywords = ["cow-protocol", "sdk", "trading", "defi", "ethereum"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
features = ["browser-wallet"]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[features]
default = []
alloy = [
    "dep:cow-sdk-alloy",
    "cow-sdk-alloy/http",
    "cow-sdk-alloy/eip712",
    "alloy-provider",
    "alloy-signer",
]
alloy-provider = ["dep:cow-sdk-alloy-provider"]
alloy-signer = [
    "dep:cow-sdk-alloy-signer",
    "cow-sdk-alloy-signer/eip712",
]
browser-wallet = ["dep:cow-sdk-browser-wallet"]
http-classifier = ["cow-sdk-transport-policy/reqwest-classifier"]
# Re-exports the opt-in `InMemoryEip1271VerificationCache`. Off by default;
# the trait and `NoopEip1271VerificationCache` are always available.
in-memory-cache = ["cow-sdk-signing/in-memory-cache"]
wasm = ["dep:cow-sdk-pure-helpers", "dep:cow-sdk-wasm"]
tracing = [
    "cow-sdk-alloy?/tracing",
    "cow-sdk-alloy-provider?/tracing",
    "cow-sdk-alloy-signer?/tracing",
    "cow-sdk-app-data/tracing",
    "cow-sdk-contracts/tracing",
    "cow-sdk-core/tracing",
    "cow-sdk-orderbook/tracing",
    "cow-sdk-signing/tracing",
    "cow-sdk-transport-policy/tracing",
    "cow-sdk-trading/tracing",
    "cow-sdk-browser-wallet?/tracing",
    "cow-sdk-wasm?/tracing",
]

[dependencies]
cow-sdk-alloy = { path = "../alloy", version = "0.1.0", optional = true, default-features = false }
cow-sdk-alloy-provider = { path = "../alloy-provider", version = "0.1.0", optional = true, default-features = false }
cow-sdk-alloy-signer = { path = "../alloy-signer", version = "0.1.0", optional = true, default-features = false }
cow-sdk-app-data = { path = "../app-data", version = "0.1.0" }
cow-sdk-browser-wallet = { path = "../browser-wallet", version = "0.1.0", optional = true, default-features = false }
cow-sdk-contracts = { path = "../contracts", version = "0.1.0" }
cow-sdk-orderbook = { path = "../orderbook", version = "0.1.0" }
cow-sdk-signing = { path = "../signing", version = "0.1.0" }
cow-sdk-transport-policy = { path = "../transport-policy", version = "0.1.0" }
cow-sdk-trading = { path = "../trading", version = "0.1.0" }
cow-sdk-pure-helpers = { path = "../pure-helpers", version = "0.1.0", optional = true }
cow-sdk-wasm = { path = "../wasm", version = "0.1.0", optional = true }
cow-sdk-core = { path = "../core", version = "0.1.0" }
thiserror.workspace = true

[dev-dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
cow-sdk-subgraph = { path = "../subgraph", version = "0.1.0" }
num-bigint.workspace = true
serde.workspace = true
serde_json.workspace = true
trybuild.workspace = true
