[package]
name = "cow-sdk-signing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Deterministic CoW Protocol order hashing, EIP-712 signing, and UID helpers"
readme = "README.md"
documentation = "https://docs.rs/cow-sdk-signing"
homepage = "https://github.com/cowdao-grants/cow-rs"
keywords = ["cow-protocol", "sdk", "eip712", "signing", "defi"]
categories = ["cryptography", "cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[lints]
workspace = true

[dependencies]
cow-sdk-core = { path = "../core", version = "0.1.0" }
cow-sdk-contracts = { path = "../contracts", version = "0.1.0" }
hex.workspace = true
num-bigint.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
