[package]
name = "cow-sdk-subgraph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Typed CoW Protocol subgraph query primitives"
readme = "README.md"
documentation = "https://docs.rs/cow-sdk-subgraph"
homepage = "https://github.com/cowdao-grants/cow-rs"
keywords = ["cow-protocol", "sdk", "subgraph", "graphql", "analytics"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[lints]
workspace = true

[features]
default = []
tracing = ["dep:tracing", "cow-sdk-core/tracing"]

[dependencies]
cow-sdk-core = { path = "../core", version = "0.1.0", features = ["transport-policy"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }
url.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = ["rustls", "gzip"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
cow-sdk-transport-wasm = { path = "../transport-wasm", version = "0.1.0" }

[dev-dependencies]
cow-sdk-test-utils = { path = "../test-utils" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util", "time"] }
trybuild.workspace = true
wiremock.workspace = true
