[package]
name = "cow-sdk-test"
publish = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

description = "In-memory test doubles for the cow-rs SDK public traits (OrderbookClient, Signer, Provider) so downstream applications can test their CoW Protocol integration without a live orderbook, RPC endpoint, or wallet."
readme = "README.md"

[lints]
workspace = true

[dependencies]
cow-sdk-core = { path = "../core", version = "0.1.0" }
cow-sdk-orderbook = { path = "../orderbook", version = "0.1.0" }
cow-sdk-contracts = { path = "../contracts", version = "0.1.0" }
cow-sdk-trading = { path = "../trading", version = "0.1.0" }
async-trait = { workspace = true }
# The default signer really signs (a public dev key) so its signatures recover
# to the reported address, clearing the owner-recovery gate end to end.
alloy-dyn-abi = { workspace = true, features = ["std", "eip712"] }
alloy-primitives = { workspace = true }
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa"] }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
