[package]
name = "cow-sdk-trading"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "High-level CoW Protocol trading orchestration surface"
readme = "README.md"
documentation = "https://docs.rs/cow-sdk-trading"
homepage = "https://github.com/0xSymbiome/cow-rs"
keywords = ["cow-protocol", "sdk", "trading", "defi", "ethereum"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[lints]
workspace = true

[features]
default = []
tracing = [
  "dep:tracing",
  "cow-sdk-app-data/tracing",
  "cow-sdk-contracts/tracing",
  "cow-sdk-core/tracing",
  "cow-sdk-orderbook/tracing",
  "cow-sdk-signing/tracing",
]

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
async-trait.workspace = true
cow-sdk-app-data = { path = "../app-data", version = "0.1.0-alpha.1" }
cow-sdk-contracts = { path = "../contracts", version = "0.1.0-alpha.1" }
cow-sdk-core = { path = "../core", version = "0.1.0-alpha.1", features = ["transport-policy"] }
cow-sdk-orderbook = { path = "../orderbook", version = "0.1.0-alpha.1" }
cow-sdk-signing = { path = "../signing", version = "0.1.0-alpha.1" }
futures-timer.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
cow-sdk-test-utils = { path = "../test-utils" }
criterion.workspace = true
proptest.workspace = true
trybuild.workspace = true

[[bench]]
name = "order_build"
harness = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers.workspace = true
web-time.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util", "time"] }
wasm-bindgen-test.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
alloy-dyn-abi = { workspace = true, features = ["std", "eip712"] }
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util", "time"] }
