[package]
name = "cow-sdk-trading"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "High-level CoW Protocol trading orchestration surface"
readme = "README.md"
documentation = "https://docs.rs/cow-sdk-trading"
homepage = "https://github.com/0xSymbiome/cow-rs"
keywords = ["cow-protocol", "sdk", "trading", "defi", "ethereum"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[lints]
workspace = true

[features]
default = []
tracing = [
  "dep:tracing",
  "cow-sdk-app-data/tracing",
  "cow-sdk-contracts/tracing",
  "cow-sdk-core/tracing",
  "cow-sdk-orderbook/tracing",
  "cow-sdk-signing/tracing",
]
# The Tsify boundary derive on the trading result/parameter trees
# (`QuoteResults`, `TradeParams`, `TradingAppDataInfo`) surfaced by the
# wasm-bindgen npm leaf's `trading` flavour. Off by default and pulled only by
# that flavour. Enabling it transitively enables the boundary derive on the
# crates the trees reference (`cow-sdk-core/ts-bindings` for the order /
# typed-data / quote-amounts types and `CowEnv`, `cow-sdk-app-data/ts-bindings`
# for the partner-fee types, and `cow-sdk-orderbook/ts-bindings` for the runtime
# binding) so the whole `.d.ts` tree generates from one definition each. Tsify
# emits each `.d.ts` as a global `typescript_custom_section`, so a target-gated
# (but feature-ungated) derive would leak these trading-only types into every
# flavour that links this crate; this feature scopes them to `trading`. The wasm
# `tsify`/`wasm-bindgen` deps are target-gated to JS realms, so enabling this on
# a non-wasm or WASI target is an inert no-op.
ts-bindings = [
  "dep:tsify",
  "dep:wasm-bindgen",
  "cow-sdk-core/ts-bindings",
  "cow-sdk-app-data/ts-bindings",
  "cow-sdk-orderbook/ts-bindings-trading",
]

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
async-trait.workspace = true
cow-sdk-app-data = { path = "../app-data", version = "0.1.0-alpha.8" }
cow-sdk-contracts = { path = "../contracts", version = "0.1.0-alpha.8" }
cow-sdk-core = { path = "../core", version = "0.1.0-alpha.8", features = ["transport-policy"] }
cow-sdk-orderbook = { path = "../orderbook", version = "0.1.0-alpha.8" }
cow-sdk-signing = { path = "../signing", version = "0.1.0-alpha.8" }
futures-timer.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
cow-sdk-test-utils = { path = "../test-utils" }
criterion.workspace = true
proptest.workspace = true
trybuild.workspace = true

[[bench]]
name = "order_build"
harness = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers.workspace = true
web-time.workspace = true

# The Tsify boundary derive on the trading result/parameter trees consumed by
# the wasm-bindgen npm leaf (`crates/js`). Gated to JS realms
# (`target_os = "unknown"`) so WASI / Component builds never pull
# tsify/wasm-bindgen — only the one wasm target whose `target_os` is `unknown`
# carries them. Mirrors the orderbook-crate gate. Optional and pulled by the
# `ts-bindings` feature.
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
tsify = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util", "time"] }
wasm-bindgen-test.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
alloy-dyn-abi = { workspace = true, features = ["std", "eip712"] }
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util", "time"] }
